src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwF1000-dhU-b-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen true\n    default-column-width { fixed 1000; }\n    default-window-height {  }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 680, bounds: 1231 × 680, states: [Activated]
